--- a/H4_XamarinStreamingTinder/StreamingTinder/StreamingTinder/Views/CreateAccountPage.xaml
+++ b/H4_XamarinStreamingTinder/StreamingTinder/StreamingTinder/Views/CreateAccountPage.xaml
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="StreamingTinder.Views.AboutPage"
+             x:Class="StreamingTinder.Views.CreateAccountPage"
              xmlns:vm="clr-namespace:StreamingTinder.ViewModels"
              NavigationPage.HasNavigationBar="False">
-    
+
     <ContentPage.BindingContext>
-        <vm:AboutViewModel />
+        <vm:CreateAccountViewModel />
     </ContentPage.BindingContext>
-    
+
     <ContentPage.Resources>
         <ResourceDictionary>
             <Color x:Key="Accent">#96d1ff</Color>
@@ -33,30 +33,27 @@
         </StackLayout>
         <ScrollView Grid.Row="1">
             <StackLayout Orientation="Vertical" Padding="30,24,30,24" Spacing="20">
-                <Label Text="Login" FontSize="Title"/>
-
-
+                
                 <StackLayout Orientation="Vertical" Spacing="10">
                     <Entry x:Name="Email" Text="{Binding Email}" Placeholder="Email"   
                         HeightRequest="50"   
                         Keyboard="Email" />
+                    
                     <Entry x:Name="Password" Text="{Binding Password}" Placeholder="Password"   
                         HeightRequest="50"   
                         IsPassword="True" />
+                    
+                    <Entry x:Name="Username" Text="{Binding Username}" Placeholder="Username"   
+                        HeightRequest="50"   
+                        Keyboard="Default" />
+
+                    <Button Margin="0,10,0,0" 
+                        Text="Create user"
+                        Command="{Binding ClickCreateButton}"
+                        BackgroundColor="{StaticResource Primary}"
+                        TextColor="White" />
+
                 </StackLayout>
-                
-
-                <Button Margin="0,10,0,0" 
-                        Text="Login"
-                        Command="{Binding ClickLoginButton}"
-                        BackgroundColor="{StaticResource Primary}"
-                        TextColor="White" />
-
-                <Button Margin="0,10,0,0" 
-                        Text="Create Account"
-                        Command="{Binding ClickCreateNewButton}"
-                        BackgroundColor="{StaticResource Primary}"
-                        TextColor="White" />
 
             </StackLayout>
         </ScrollView>
